# kodos

./: .gitignore  LICENSE  README.md  flake.nix  install_kodos.sh  notes.md  pyproject-poetry.toml  pyproject.toml  update_mirrorlist.sh
.github/workflows/: kodos-release.yml  python-app.yml
docs/images/: KodOS.txt
example/: basic.lua  cli.lua  config copy.lua  config.lua  config2.lua  configs.lua  disk-btrfs.lua  disk-new.lua  disk.lua  dotfile_manager.lua  generate_config.lua  mirrorlist  pacman.conf  repos.lua  simple.lua  testvm.lua  utils.lua
example/testvm/: cli.lua  configuration.lua  development.lua  gnome.lua  testvm.lua
example/testvm/modules/: themes.lua
example/testvmdeb/: configuration.lua
hosts/eszkoz/: cli.lua  development.lua  eszkoz.lua  extra.lua  gnome.lua
hosts/testvm/: base-conf.lua  cli-testvm.lua  gnome.lua  testvm.lua
kod/: arch.py  archpkgs.py  commands.py  common.py  core.py  debian.py  debpkgs.py  filesytem.py  kod.py  main.py  units.py
kod/lib/: configs.lua  disk.lua  dotfile_manager.lua  repos.lua
src/kod/: arch.py  boot_manager.py  chroot.py  common.py  core.py  debian.py  filesystem.py  filesytem.py  kod.py  package_manager.py  system_config.py  user_manager.py
src/kod/lib/: chroot.py  configs.lua  mount.lua  repos.lua  utils.lua
tests/: test_common.py
tools/: akshara  arch-chroot-py  kchroot.py  kod  kod-shell  kod-shell2  kodstrap  mirrorlist  mkinitramfs  run_stage.sh  system.yaml.sample
tools/akshara-dir/: .BUILDINFO  .MTREE  .PKGINFO
