# [tool.poetry]
[project]
name = "kod"
version = "0.1.0.dev1"
description = "Kod package management"
authors = [{name="Antal Buss"}, {email="antal.buss@gmail.com"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "lupa >= 2.2",
  "click >= 8.1.8",
]

[project.scripts]
kod = "kod.kod:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
