# [tool.poetry]
[project]
name = "kod"
version = "0.1.4.1"
description = "Kod package management"
authors = [{name="Antal Buss"}, {email="antal.buss@gmail.com"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "lupa >= 2.2",
  "click >= 8.1.8",
]

[project.optional-dependencies]
dev = [
  "pytest >= 7.0",
]

[project.urls]
Repository = "https://github.com/kodos-prj/kodos"

[project.scripts]
kod = "kod.kod:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
